<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.ywk.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readme" />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_spotity_streamer"
            android:layout_width="match_parent"
            android:background="@color/yellow"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            />
        <Button
            android:id="@+id/btn_scores_app"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@color/yellow"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            />
        <Button
            android:id="@+id/btn_library_app"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@color/yellow"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            />
        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@color/yellow"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            />
        <Button
            android:id="@+id/btn_bacon_reader"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@color/yellow"
            android:layout_height="wrap_content"
            android:text="@string/bacon_reader"
            />
        <Button
            android:id="@+id/btn_capstone"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            />


    </LinearLayout>


</LinearLayout>
